# internal/features/bulk_operation/model.go
@@ -1,6 +1,7 @@
 package bulk_operation
 
 import (
+	"go-crm/internal/common/models"
 	"time"
 
 	"go.mongodb.org/mongo-driver/bson/primitive"
@@ -18,17 +19,19 @@ const (
 type BulkOperationType string
 
 const (
-	BulkTypeUpdate BulkOperationType = "update"
-	BulkTypeDelete BulkOperationType = "delete"
+	BulkTypeUpdate    BulkOperationType = "update"
+	BulkTypeDelete    BulkOperationType = "delete"
+	BulkTypeDuplicate BulkOperationType = "duplicate"
 )
 
 // BulkOperation represents a bulk update operation
 type BulkOperation struct {
 	ID             primitive.ObjectID     `json:"id" bson:"_id,omitempty"`
 	UserID         primitive.ObjectID     `json:"user_id" bson:"user_id"`
+	TenantID       primitive.ObjectID     `json:"tenant_id" bson:"tenant_id"`
 	ModuleName     string                 `json:"module_name" bson:"module_name"`
 	Type           BulkOperationType      `json:"type" bson:"type"`
-	Filters        map[string]interface{} `json:"filters" bson:"filters"`
+	Filters        []models.Filter        `json:"filters" bson:"filters"`
 	Updates        map[string]interface{} `json:"updates" bson:"updates"`
 	Status         BulkOperationStatus    `json:"status" bson:"status"`
 	TotalRecords   int                    `json:"total_records" bson:"total_records"`
